<resources>
    <string name="app_name">TodoList</string>
    <string name="addItemHint">Add new item</string>
    <string name="no_todos">You have nothing to do!</string>
    <string name="menu_insert">Add todo</string>
    <string name="menu_delete">Delete todo</string>
    <string name="sort_label">Sort by</string>
    <string name="todo_summary">Summary</string>
    <string name="todo_description">Description</string>
    <string name="todo_edit_summary">Summary</string>
    <string name="todo_edit_description">Description</string>
    <string name="todo_edit_date">Date</string>
    <string name="todo_edit_time">Time</string>
    <string name="todo_edit_status">Complete?</string>
    <string name="todo_edit_confirm">Save</string>
    <string name="todo_edit_delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="voice_recog">Voice</string>
</resources>
